--- a/arknights/arknightsIndex.html
+++ b/arknights/arknightsIndex.html
@@ -25,8 +25,8 @@
 			<li><a href="#">Videos (PVs)</a>
 				<ul>
 					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList01()">Post-launch</a></li>
-					<li><a href="arknightsPVsPost.html" onClick="">1st anniversary (not yet...)</a></li>
-					<li><a href="arknightsPVsPost.html" onClick="">2nd anniversary (not yet...)</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList02()">1st anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList01()">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Musics (EPs)</a>
@@ -42,7 +42,7 @@
 			</li>
 			<li><a href="#">Other</a>
 				<ul>
-					<li><a href="../about.html">About (terminal)</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="setting.html">Setting</a></li>
 				</ul>
 			</li>
@@ -56,9 +56,9 @@
 			<li><a href="arknightsIndex.html">Home</a></li>
 			<li><a href="#">Videos (PVs)</a>
 				<ul>
-					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
-					<li><a href="#">1st anniversary</a></li>
-					<li><a href="#">2nd anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList01()">Post-launch</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList02()">1st anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList03()">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Musics (EPs)</a>
@@ -74,7 +74,7 @@
 			</li>
 			<li><a href="#">Other</a>
 				<ul>
-					<li><a href="../about.html">About (terminal)</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="setting.html">Setting</a></li>
 				</ul>
 			</li>
@@ -96,16 +96,16 @@
 	<div>
 		<fieldset>
 			<legend>Site News</legend>
-			<p>for latest news of this site, visit:</p>
+			<p>read more about [Arknights v0.1.1] site in:</p>
 			</br>
-			<a href="../about.html" style="color: white; background: black; padding: 2px; text-decoration: none">about page</a>
+			<a href="about.html" style="color: white; background: black; padding: 2px; text-decoration: none">about page</a>
 		</fieldset>
 		
 		<fieldset>
 			<legend>The PVs</legend>
 			<a href="arknightsPVsPost.html" onClick="setAkVideoPartList01()"><div class="sub-nav">Post-launch PVs</div></a>
-			<a href="arknightsPVsPost.html" onClick=""><div class="sub-nav">Post 1st year PVs (not yet...)</div></a>
-			<a href="arknightsPVsPost.html" onClick=""><div class="sub-nav">Post 2nd year PVs (not yet...)</div></a>
+			<a href="arknightsPVsPost.html" onClick="setAkVideoPartList02()"><div class="sub-nav">Post 1st year PVs</div></a>
+			<a href="arknightsPVsPost.html" onClick="setAkVideoPartList03()"><div class="sub-nav">Post 2nd year PVs</div></a>
 		</fieldset>
 		
 		<fieldset>
