--- a/arknights/postPVs-playlist/postPVs01-playlist/postPVs.html
+++ b/arknights/postPVs-playlist/postPVs01-playlist/postPVs.html
@@ -2,97 +2,104 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Arknights PV 01: PV</title>
 	<link href="../css/arknightsPVsDetailsStyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	
 	<!--contain pv video-->
-	<div id="playlist-pv" class="playlist-pv">
+	<div>
 
-		<button type="button" id="cont04" class="content-item" onClick="pv_01()">Episode 5: Necessary Solution<span class="story-spoil">!</span>
+		<button type="button" class="content-item" onClick="pv_01()">Episode 5: Necessary Solution<span class="story-spoil" title="story spoiler">!</span>
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">2:07</div>
 			</div>
 		</button>
-		<button type="button" id="cont05" class="content-item" onClick="pv_02()">Grani and the Knight's Treasure
+		<button type="button" class="content-item" onClick="pv_02()">Grani and the Knight's Treasure
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:16</div>
 			</div>
 		</button>
-		<button type="button" id="cont06" class="content-item" onClick="pv_03()">Operatinal Intellingent
+		<button type="button" class="content-item" onClick="pv_03()">Operatinal Intellingent
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:36</div>
 			</div>
 		</button>
-		<button type="button" id="cont07" class="content-item" onClick="pv_04()">Heart of Surging Flame
+		<button type="button" class="content-item" onClick="pv_04()">Heart of Surging Flame
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:29</div>
 			</div>
 		</button>
-		<button type="button" id="cont08" class="content-item" onClick="pv_05()">Code of Brawl
+		<button type="button" class="content-item" onClick="rerun_06()">Heart of Surging Flame
 			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-detail">Rerun PV</div>
 			</div>
 		</button>
-		<!--===========================================================================================================================================================================-->
-		<button type="button" id="cont09" class="content-item" onClick="anime_07()">Contingency Contract
+		<button type="button" class="content-item" onClick="pv_05()">Code of Brawl
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont10" class="content-item" onClick="pv_06()">Episode 6: Partial Necrosis<span class="story-spoil">!</span>
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont11" class="content-item" onClick="pv_07()">Ancient Forge
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont12" class="content-item" onClick="pv_08()">Stories of Afternoon
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont13" class="content-item" onClick="pv_09()">CC #0: Operation Barrenland
-			<div>
-				<div class="content-detail">PV</div>
+				<div class="content-duration">1:54</div>
 			</div>
 		</button>
 		<!--===========================================================================================================================================================================-->
-		<button type="button" id="cont14" class="content-item" onClick="pv_10()">Children of Ursus
+		<button type="button" class="content-item" onClick="anime_07()">Contingency Contract
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:22</div>
 			</div>
 		</button>
-		<button type="button" id="cont15" class="content-item" onClick="pv_11()">Twilight of Wolumonde
+		<button type="button" class="content-item" onClick="pv_06()">Episode 6: Partial Necrosis<span class="story-spoil" title="story spoiler">!</span>
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">2:05</div>
 			</div>
 		</button>
-		<button type="button" id="cont16" class="content-item" onClick="pv_12()">CC #1: Operation Pyrite
+		<button type="button" class="content-item" onClick="pv_07()">Ancient Forge
 			<div>
 				<div class="content-detail">PV</div>
+				<div class="content-duration">1:28</div>
 			</div>
 		</button>
-		<button type="button" id="cont17" class="content-item" onClick="pv_13()">Darknights Memoir
+		<button type="button" class="content-item" onClick="pv_08()">Stories of Afternoon
 			<div>
 				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:12</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="pv_09()">CC #0: Operation Barrenland
+			<div>
+				<div class="content-detail">PV</div>
+				<div class="content-duration">1:16</div>
+			</div>
+		</button>
+		<!--===========================================================================================================================================================================-->
+		<button type="button" class="content-item" onClick="pv_10()">Children of Ursus
+			<div>
+				<div class="content-detail">PV</div>
+				<div class="content-duration">1:41</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="pv_11()">Twilight of Wolumonde
+			<div>
+				<div class="content-detail">PV</div>
+				<div class="content-duration">2:02</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="pv_12()">CC #1: Operation Pyrite
+			<div>
+				<div class="content-detail">PV</div>
+				<div class="content-duration">1:23</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="pv_13()">Darknights Memoir
+			<div>
+				<div class="content-detail">PV</div>
+				<div class="content-duration">1:29</div>
 			</div>	
 		</button>
 	</div>
