--- a/index.html
+++ b/index.html
@@ -90,19 +90,14 @@
 		
 		<fieldset>
 			<legend>Site News</legend>
-			<p>v0.1.0 (12 February 2022)</p>
+			<p>v0.1.1 (13 February 2022)</p>
 			</br>
-				<p>[Arknights]</p>
+				<p>&rsaquo; [Quanta] and [Arknights] including any future sub index will have separated log now.</p>
 			</br>
-				<p>&rsaquo; redo the playlist coding, now individual videos of individual playlist annual part can be view from the same page, reducing file count in website directory.</p>
-				<p>&rsaquo; added new [3D Animation] category in player page (1st year annual part doesn't have any 3d anime...).</p>
-				<p>&rsaquo; added exclamation mark for certain videos. RED = potential copyright, YELLOW = story spoiler and NONE = safe to watch.</p>
-				<p>&rsaquo; navigation bar was resized. now it always take the whole top browser, unless the max width meet.</p>
-				<p>&rsaquo; player page is now responsive for all device, global site min-width is 350px.</p>
-				<p>&rsaquo; the [all] filter actually show all relatable items, ALL OF IT.</p>
-				<p>&rsaquo; other miscellaneous change and fixed.</p>
+				<a href="arknights/arknightsIndex.html" style="color: white; background: black; padding: 2px; text-decoration: none">visit arknights terminal</a>
 			</br>
-				<p>&rsaquo; read more infomation in detail at [About] page.</p>
+			</br>
+				<p>&rsaquo; read more infomation about [Quanta Terminal] update in [About] page.</p>
 			</br>
 				<a href="about.html" style="color: white; background: black; padding: 2px; text-decoration: none">about page</a>
 		</fieldset>
