--- a/arknights/postPVs-playlist/postPVs01-playlist/postAnimes.html
+++ b/arknights/postPVs-playlist/postPVs01-playlist/postAnimes.html
@@ -2,93 +2,94 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Arknights PV 01: Anime</title>
 	<link href="../css/arknightsPVsDetailsStyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	
 	<!--content anime video-->
-	<div id="playlist-anime" class="playlist-anime">
+	<div>
 
-		<button type="button" id="cont03" class="content-item" onClick="anime_01()">Animation Trailer<span class="copyright">!</span>
+		<button type="button" class="content-item" onClick="anime_01()">Animation Trailer<span class="copyright" title="copyright">!</span>
 			<div>
 				<div class="content-detail">Trailer</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:51</div>
 			</div>
 		</button>
-		<button type="button" id="cont04" class="content-item" onClick="anime_02()">Episode 5: Necessary Solution<span class="story-spoil">!</span>
+		<button type="button" class="content-item" onClick="anime_02()">Episode 5: Necessary Solution<span class="story-spoil" title="story spoiler">!</span>
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
 			</div>
 		</button>
-		<button type="button" id="cont05" class="content-item" onClick="anime_03()">Grani and the Knight's Treasure
+		<button type="button" class="content-item" onClick="anime_03()">Grani and the Knight's Treasure
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:15</div>
 			</div>
 		</button>
-		<button type="button" id="cont06" class="content-item" onClick="anime_04()">Operatinal Intellingent
+		<button type="button" class="content-item" onClick="anime_04()">Operatinal Intellingent
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:16</div>
 			</div>
 		</button>
-		<button type="button" id="cont07" class="content-item" onClick="anime_05()">Heart of Surging Flame
+		<button type="button" class="content-item" onClick="anime_05()">Heart of Surging Flame
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<!--===========================================================================================================================================================================-->
-		<button type="button" id="cont08" class="content-item" onClick="anime_06()">Code of Brawl
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont09" class="content-item" onClick="anime_07()">Contingency Contract
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont10" class="content-item" onClick="anime_08()">Episode 6: Partial Necrosis<span class="story-spoil">!</span>
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont11" class="content-item" onClick="anime_09()">Ancient Forge
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
-			</div>
-		</button>
-		<button type="button" id="cont12" class="content-item" onClick="anime_10()">Stories of Afternoon
-			<div>
-				<div class="content-detail">PV</div>
-				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
 			</div>
 		</button>
 		<!--===========================================================================================================================================================================-->
-		<button type="button" id="cont14" class="content-item" onClick="anime_11()">Children of Ursus
+		<button type="button" class="content-item" onClick="anime_06()">Code of Brawl
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
 			</div>
 		</button>
-		<button type="button" id="cont15" class="content-item" onClick="anime_12()">Twilight of Wolumonde
+		<button type="button" class="content-item" onClick="anime_07()">Contingency Contract
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:22</div>
 			</div>
 		</button>
-		<button type="button" id="cont17" class="content-item" onClick="anime_13()">Darknights Memoir
+		<button type="button" class="content-item" onClick="anime_08()">Episode 6: Partial Necrosis<span class="story-spoil" title="story spoiler">!</span>
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="anime_09()">Ancient Forge
+			<div>
+				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="anime_10()">Stories of Afternoon
+			<div>
+				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:19</div>
+			</div>
+		</button>
+		<!--===========================================================================================================================================================================-->
+		<button type="button" class="content-item" onClick="anime_11()">Children of Ursus
+			<div>
+				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:18</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="anime_12()">Twilight of Wolumonde
+			<div>
+				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:21</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="anime_13()">Darknights Memoir
+			<div>
+				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
 			</div>	
 		</button>
 	</div>
