--- a/arknights/postPVs-playlist/postPVs01-playlist/postRerun.html
+++ b/arknights/postPVs-playlist/postPVs01-playlist/postRerun.html
@@ -3,43 +3,49 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Arknights PV 01: Rerun</title>
 	<link href="../css/arknightsPVsDetailsStyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	
 	<!--content rerun video-->
-	<div id="playlist-rerun" class="playlist-rerun">
+	<div>
 
 		<button type="button" id="cont03" class="content-item" onClick="rerun_01()">Grani and the Knight's Treasure
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:19</div>
 			</div>
 		</button>
 		<button type="button" id="cont04" class="content-item" onClick="rerun_02()">Heart of Surging Flame
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:31</div>
+			</div>
+		</button>
+		<button type="button" class="content-item" onClick="rerun_06()">Heart of Surging Flame
+			<div>
+				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:38</div>
 			</div>
 		</button>
 		<button type="button" id="cont05" class="content-item" onClick="rerun_03()">Code of Brawl
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:35</div>
 			</div>
 		</button>
 		<button type="button" id="cont06" class="content-item" onClick="rerun_04()">Twilight of Wolumonde
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:22</div>
 			</div>
 		</button>
 		<button type="button" id="cont07" class="content-item" onClick="rerun_05()">Darknights Memoir
 			<div>
-				<div class="content-detail">PV</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">0:29</div>
 			</div>
 		</button>
 	</div>
