--- a/arknights/postPVs-playlist/postPVs01-playlist/postTrailer.html
+++ b/arknights/postPVs-playlist/postPVs01-playlist/postTrailer.html
@@ -2,29 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Arknights PV 01: Trailer</title>
 	<link href="../css/arknightsPVsDetailsStyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	
 	<!--contain trailer video-->
-	<div class="contain">
+	<div>
 
-		<button type="button" id="cont01" class="content-item" onClick="trailer_01()">Concept Trailer 1<span class="copyright">!</span>
+		<button type="button" class="content-item" onClick="trailer_01()">Concept Trailer 1<span class="copyright" title="copyright">!</span>
 			<div>
 				<div class="content-detail">Trailer</div>
+				<div class="content-duration">3:01</div>
 			</div>
 		</button>
-		<button type="button" id="cont02" class="content-item" onClick="trailer_02()">Concept Trailer 2<span class="copyright">!</span>
+		<button type="button" class="content-item" onClick="trailer_02()">Concept Trailer 2<span class="copyright" title="copyright">!</span>
 			<div>
 				<div class="content-detail">Trailer</div>
+				<div class="content-duration">3:55</div>
 			</div>
 		</button>
-		<button type="button" id="cont03" class="content-item" onClick="anime_01()">Animation Trailer<span class="copyright">!</span>
+		<button type="button" class="content-item" onClick="anime_01()">Animation Trailer<span class="copyright" title="copyright">!</span>
 			<div>
 				<div class="content-detail">Trailer</div>
 				<div class="content-detail">Anime</div>
+				<div class="content-duration">1:51</div>
 			</div>
 		</button>
 	</div>
