--- a/arknights/setting.html
+++ b/arknights/setting.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" content="Welcome to Quanta">
-	<title>Arknights: Setting</title>
+	<title>Arknights: setting - Quanta</title>
 	<link rel="icon" type="image/png" href="../img/favicon.png">
 	<link href="../css/globalStyle.css" rel="stylesheet" type="text/css">
 	<link href="../css/m.globalStyle.css" rel="stylesheet" type="text/css">
@@ -23,9 +23,9 @@
 			<li><a href="arknightsIndex.html">Home</a></li>
 			<li><a href="#">Videos (PVs)</a>
 				<ul>
-					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
-					<li><a href="#">1st anniversary</a></li>
-					<li><a href="#">2nd anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList01()">Post-launch</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList02()">1st anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList03()">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Musics (EPs)</a>
@@ -41,7 +41,7 @@
 			</li>
 			<li><a href="#">Other</a>
 				<ul>
-					<li><a href="../about.html" target="_blank">About (terminal)</a></li>
+					<li><a href="about.html" target="_blank">About</a></li>
 					<li><a href="setting.html">Setting</a></li>
 				</ul>
 			</li>
@@ -55,9 +55,9 @@
 			<li><a href="arknightsIndex.html">Home</a></li>
 			<li><a href="#">Videos (PVs)</a>
 				<ul>
-					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
-					<li><a href="#">1st anniversary</a></li>
-					<li><a href="#">2nd anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList01()">Post-launch</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList02()">1st anniversary</a></li>
+					<li><a href="arknightsPVsPost.html" onClick="setAkVideoPartList03()">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Musics (EPs)</a>
@@ -73,7 +73,7 @@
 			</li>
 			<li><a href="#">Other</a>
 				<ul>
-					<li><a href="../about.html">About (terminal)</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="setting.html">Setting</a></li>
 				</ul>
 			</li>
