--- a/setting.html
+++ b/setting.html
@@ -29,7 +29,7 @@
 			</li>
 			<li><a href="#">Projects:</a>
 				<ul>
-					<li><a href="arknights/arknightsIndex.html">Arknights</a></li>
+					<li><a href="https://markazmaxima.github.io/arknightsMediaSorting/">Arknights</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Other</a>
@@ -55,7 +55,7 @@
 			</li>
 			<li><a href="#">Projects:</a>
 				<ul>
-					<li><a href="arknights/arknightsIndex.html">Arknights</a></li>
+					<li><a href="https://markazmaxima.github.io/arknightsMediaSorting/">Arknights</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Other</a>
